fixed the overlapping issue in kyc phone verification

--- a/src/app/feature/pages/ddx-kyc/ddx-kyc-phone-verification/ddx-kyc-phone-verification.component.scss
+++ b/src/app/feature/pages/ddx-kyc/ddx-kyc-phone-verification/ddx-kyc-phone-verification.component.scss
@@ -12,6 +12,10 @@
       'verification'
       'actions';
 
+    .mat-error {
+      margin-top: 13px;
+    }
+
     #countryTelephoneCode {
       grid-area: countryTelephoneCode;
     }
